<?xml version="1.0"?>
<package format="2">
  <name>python_vehicle_prediction_prototype</name>
  <version>0.0.0</version>
  <description>Prototype implementation of parts of my diss.</description>

  <license>MRT</license>
  <maintainer email="jannik.quehl@kit.edu">Jannik Quehl</maintainer>
  <author email="jannik.quehl@kit.edu">Jannik Quehl</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/quehl/python_vehicle_prediction_prototype</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_interface_ros</depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
